# adobe-stock-csv-generator

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: CSV_SPEC.md  QA_CHECKLIST.md  WORKFLOW.md
fixtures/minimal/: README.md
prompts/: CODEX_PROMPT.md
src/: adobe_stock_csv_cli.py
tests/: test_adobe_stock_csv_cli.py
