[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adobe-stock-csv-generator"
version = "0.1.0"
description = "Resumable local CLI for Adobe Stock CSV metadata generation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "adobe-stock-csv-generator contributors" }
]
keywords = ["adobe-stock", "csv", "metadata", "lmstudio", "ollama"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/riefkyhd/adobe-stock-csv-generator"
Repository = "https://github.com/riefkyhd/adobe-stock-csv-generator"
Issues = "https://github.com/riefkyhd/adobe-stock-csv-generator/issues"

[project.scripts]
adobe-stock-csv = "adobe_stock_csv_cli:main"

[tool.setuptools]
py-modules = ["adobe_stock_csv_cli"]
package-dir = {"" = "src"}
